spade-tests/src/snapshots/spade_tests__hir_lowering__tests__assert_statements_lower_correctly.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "items.iter().map(| item | format! (\"{item}\")).join(\"\\n\")"
---
entity \name ((x, x_n101, int<16>), (y, y_n102, int<16>)) -> int<16> {
	let e384: bool = Eq(x_n101, y_n102)
	let e2: bool = Alias(e384)
	assert e2
} => x_n101
