spade-tests/src/snapshots/spade_tests__hir_lowering__tests__expect_entity_got_function_error_works.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn x() -> bool {true}

entity test() -> bool {
    inst x()
}

error: Unexpected `inst` for function call
  ┌─ testinput:4:5
  │
1 │ fn x() -> bool {true}
  │ -- x is defined as a function here
  ·
4 │     inst x()
  │     ^^^^ - Because x is a function
  │     │     
  │     Unexpected `inst`
  │
  = Consider removing the `inst`
  │
4 │     inst x()
  │     ----
