spade-tests/src/snapshots/spade_tests__hir_lowering__tests__expect_function_got_entity_error_works.snap
---
source: spade-tests/src/hir_lowering.rs
---
entity x() -> bool {true}

entity test() -> bool {
    x()
}

error: Expected `inst` to instantiate entity
  ┌─ testinput:4:5
  │
1 │ entity x() -> bool {true}
  │ ------ x is defined as an entity here
  ·
4 │     x()
  │     ^
  │     │
  │     Expected `inst`
  │     Because x is an entity
  │
  = Consider adding `inst`
  │
4 │     inst x()
  │     +++++
