spade-tests/src/snapshots/spade_tests__hir_lowering__tests__generic_instantiation_works.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "items.iter().map(| item | format! (\"{item}\")).join(\"\\n\")"
---
entity \identity[530] ((x, x_n103, bool)) -> bool {
} => x_n103
entity \x ((x, x_n104, bool)) -> bool {
	let e4: bool = Instance(\identity[530] )(x_n104)
} => e4
