spade-tests/src/snapshots/spade_tests__hir_lowering__tests__generic_integers_codegen_correctly.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "items.iter().map(| item | format! (\"{item}\")).join(\"\\n\")"
---
entity \create_t[528] () -> int<8> {
	const e2: int<8> = 64
} => e2
entity \x () -> int<8> {
	let e4: int<8> = Instance(\create_t[528] )()
} => e4
